# french-touch

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
configs/: eval_config.yaml  template.yaml
configs/eval/: eval_config.yaml  template.yaml
configs/train/: sft_config.yaml
patch_lighteval/: metrics.py  patch.py
src/eval/: eval.py  french_evals.py  metrics.py  model_params.py  prompts.py  tasks.py  utils.py
src/patch_lighteval/: patch.py
src/train/: sft.py
