[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "french-slm"
version = "0.1.0"
description = "French SLM."
authors = [
  {name = "KuraKura AI"},
]
requires-python = "==3.10.*"
dependencies = [
  "lighteval[extended_tasks]==0.10.0",
  "vllm==0.9.1",
  "ray==2.47.1",
  "more-itertools==10.7.0",
  "wandb==0.19.11",
]

[tool.uv]
package = false
