[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Luth"
version = "0.1.0"
description = "Luth: Small French Language Model"
authors = [
  {name = "KuraKura AI"},
]
requires-python = "==3.11.*"
dependencies = [
  "lighteval[extended_tasks]==0.10.0",
  "vllm==0.8.5",
  "bitsandbytes==0.46.0",
  "ray==2.47.1",
  "wandb==0.19.11",
  "more-itertools==10.7.0",
  "axolotl==0.11.0",
]

[tool.uv]
package = false
