[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Luth"
version = "0.1.0"
description = "Luth: Small French Language Model"
authors = [
  {name = "KuraKura AI"},
]
requires-python = "==3.11.*"
dependencies = [
  "ray==2.47.1",
  "wandb==0.19.11",
  "more-itertools==10.7.0"
]

[project.optional-dependencies]
train = [
  "axolotl==0.11.0",
]
eval = [
  "lighteval[extended_tasks]==0.10.0",
  "vllm==0.9.2",
  "datasets==3.5.0",
  "bitsandbytes"
]

[tool.uv]
package = false
